--- a/app/src/main/res/layout/get_start.xml
+++ b/app/src/main/res/layout/get_start.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="30dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -46,7 +46,7 @@
         <Button
             android:id="@+id/get_start_btn"
             android:layout_width="360dp"
-            android:layout_height="70dp"
+            android:layout_height="65dp"
             android:background="@drawable/rounded_rectangle"
             android:focusable="true"
             android:paddingStart="15dp"
@@ -62,18 +62,18 @@
             app:layout_constraintStart_toStartOf="parent" />
 
 
-        <com.google.android.material.progressindicator.LinearProgressIndicator
-            android:id="@+id/indicator"
-            android:padding="5dip"
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-            android:layout_width="120dp"
-            app:strokeWidth="10dp"
-            app:lineWidth="1dp"
-            app:unselectedColor="#4B576B"
-            app:selectedColor="#FF880000"
-            tools:ignore="MissingClass"
-/>
+<!--        <com.google.android.material.progressindicator.LinearProgressIndicator-->
+<!--            android:id="@+id/indicator"-->
+<!--            android:padding="5dip"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_width="120dp"-->
+<!--            app:strokeWidth="10dp"-->
+<!--            app:lineWidth="1dp"-->
+<!--            app:unselectedColor="#4B576B"-->
+<!--            app:selectedColor="#FF880000"-->
+<!--            tools:ignore="MissingClass"-->
+<!--/>-->
     </LinearLayout>
 
 </RelativeLayout>
