--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#42214A</color>
     <color name="white">#FFFFFFFF</color>
     <color name="get_start_title">#70FFFFFF</color>
 
